Fix align navbar center

--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -35,7 +35,6 @@
 }
 
 .map p {
-  font-weight: 500;
   font-size: 2rem;
   line-height: 3.2rem;
   letter-spacing: 0.02em;
@@ -68,7 +67,6 @@
 }
 
 .contact p {
-  font-weight: 500;
   font-size: 2rem;
   line-height: 3.2rem;
   letter-spacing: 0.02em;
