--- a/src/components/NavBar/NavBar.module.css
+++ b/src/components/NavBar/NavBar.module.css
@@ -5,6 +5,7 @@
   margin: 0 auto;
   flex-wrap: wrap;
   padding: 6rem;
+  align-items: center;
 }
 
 .list {
